# uvr

./: .gitignore  README.md  pyproject.toml  run_tests.sh  uvr
src/uvr/: uvr  uvr.py
tests/: foo  foo.py  test_uvr.py
uv_scripts/: run_tests.sh
