[project]
name = "uvr"
version = "0.1.14"
description = "uvr"
readme = "README.md"
authors = [
    { name = "karnigen", email = "karnigen@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
uvr = "uvr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
]
